4주차 작업내용 몬스터 기본 AI - 추적 범위에서 가장 가까운 플레이어 추적 - 최대 추적 범위를 벗어나면 제자리로 이동 A* 알고리즘 - 현재 평면상에서 플레이어를 추적한다 - 실행 시간이 길어지면 프로그램티 터진다

--- a/Server/Server.vcxproj
+++ b/Server/Server.vcxproj
@@ -126,19 +126,21 @@
     <ClCompile Include="CDBConnector.cpp" />
     <ClCompile Include="CMonster.cpp" />
     <ClCompile Include="CObject.cpp" />
+    <ClCompile Include="CPathFinder.cpp" />
     <ClCompile Include="CPlayer.cpp" />
     <ClCompile Include="CServer.cpp" />
-    <ClCompile Include="CLobby.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="node.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="CDBConnector.h" />
     <ClInclude Include="CMonster.h" />
     <ClInclude Include="CObject.h" />
+    <ClInclude Include="CPathFinder.h" />
     <ClInclude Include="CPlayer.h" />
     <ClInclude Include="CServer.h" />
     <ClInclude Include="globals.h" />
-    <ClInclude Include="CLobby.h" />
+    <ClInclude Include="node.h" />
     <ClInclude Include="packet.h" />
     <ClInclude Include="Physics.h" />
   </ItemGroup>
