--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -15,4 +15,5 @@ AppliedDefaultGraphicsPerformance=Maximum
 [/Script/Engine.RendererSettings]
 r.AllowStaticLighting=False
 r.AllowOcclusionQueries=True
+r.DefaultFeature.AutoExposure=False
 
