--- a/Server/Server.vcxproj.filters
+++ b/Server/Server.vcxproj.filters
@@ -39,6 +39,12 @@
     <ClCompile Include="node.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="KDTree.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="CTerrain.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="CServer.h">
@@ -69,6 +75,15 @@
       <Filter>헤더 파일</Filter>
     </ClInclude>
     <ClInclude Include="node.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="KDTree.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="main.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="CTerrain.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
