Last_Hero_ver0.6.1
ver.0.6.1_kjj

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,9 +1,3 @@
-[/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Game/Maps/Test_map2.Test_map2
-GameDefaultMap=/Game/Game/Maps/Test_map2.Test_map2
-GlobalDefaultGameMode=/Game/Game/BluePrints/ThirdPersonGameMode.ThirdPersonGameMode_C
-GameInstanceClass=/Script/Last_Hero.MyGameInstance
-
 [/Script/Engine.Engine]
 +ActiveGameNameRedirects=(OldGameName="TP_BlankBP",NewGameName="/Script/Last_Hero")
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_BlankBP",NewGameName="/Script/Last_Hero")
@@ -13,3 +7,20 @@ TargetedHardwareClass=Desktop
 AppliedTargetedHardwareClass=Desktop
 DefaultGraphicsPerformance=Maximum
 AppliedDefaultGraphicsPerformance=Maximum
+
+[/Script/EngineSettings.GameMapsSettings]
+EditorStartupMap=/Game/Game/Maps/LoginTitle.LoginTitle
+LocalMapOptions=
+TransitionMap=None
+bUseSplitscreen=True
+TwoPlayerSplitscreenLayout=Horizontal
+ThreePlayerSplitscreenLayout=FavorTop
+FourPlayerSplitscreenLayout=Grid
+bOffsetPlayerGamepadIds=False
+GameInstanceClass=/Script/Last_Hero.MyGameInstance
+GameDefaultMap=/Game/Game/Maps/LoginTitle.LoginTitle
+ServerDefaultMap=/Engine/Maps/Entry.Entry
+GlobalDefaultGameMode=/Game/Game/BluePrints/LoginTitle/LoginTitleGameMode.LoginTitleGameMode_C
+GlobalDefaultServerGameMode=None
+
+
