--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -9,7 +9,7 @@ DefaultGraphicsPerformance=Maximum
 AppliedDefaultGraphicsPerformance=Maximum
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Game/Maps/LoginTitle.LoginTitle
+EditorStartupMap=/Game/Game/Maps/Test_map2.Test_map2
 LocalMapOptions=
 TransitionMap=None
 bUseSplitscreen=True
@@ -18,9 +18,8 @@ ThreePlayerSplitscreenLayout=FavorTop
 FourPlayerSplitscreenLayout=Grid
 bOffsetPlayerGamepadIds=False
 GameInstanceClass=/Script/Last_Hero.MyGameInstance
-GameDefaultMap=/Game/Game/Maps/LoginTitle.LoginTitle
+GameDefaultMap=/Game/Game/Maps/Test_map2.Test_map2
 ServerDefaultMap=/Engine/Maps/Entry.Entry
 GlobalDefaultGameMode=/Game/Game/BluePrints/LoginTitle/LoginTitleGameMode.LoginTitleGameMode_C
 GlobalDefaultServerGameMode=None
-
 
