Last_Hero_ver.1.01
다운 상태의 골렘 콜리젼 수정

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,16 @@
 /Last_Hero.sln
 /.vs
+/Binaries
+/DerivedDataCache
 /Intermediate
 /Saved
 /Build
 /Plugins
+/.VC.db
 /Content/InfinityBladeGrassLands/Maps/ElvenRuins.umap
+/Content/InfinityBladeEffects
+/Content/InfinityBladeGrassLands
+/Content/InfinityBladeWeapons
+/Content/Mannequin
+/Content/Weapon_Pack
 *_BuiltData.uasset
