--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -6,3 +6,8 @@ ProjectID=2A3B855842F7E4AECFB3D3AF3636A6B5
 [StartupActions]
 bAddPacks=True
 InsertPack=(PackSource="StarterContent.upack",PackName="StarterContent")
+
+
+[/Script/UnrealEd.ProjectPackagingSettings]
+bCompressed=True
+
