--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -75,3 +75,9 @@ bGenerateNavigationOnlyAroundNavigationInvokers=True
 bForceRebuildOnLoad=True
 RuntimeGeneration=Dynamic
 
+[/Script/Engine.RendererSettings]
+r.DefaultFeature.AutoExposure=False
+
+[/Script/Engine.PhysicsSettings]
+bSupportUVFromHitResults=True
+
