--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -26,6 +26,62 @@ GlobalDefaultServerGameMode=None
 [/Script/NavigationSystem.NavigationSystemV1]
 bGenerateNavigationOnlyAroundNavigationInvokers=True
 
+[/Script/NavigationSystem.RecastNavMesh]
+bForceRebuildOnLoad=True
+RuntimeGeneration=Dynamic
+
+[/Script/Engine.RendererSettings]
+r.DefaultFeature.AutoExposure=False
+
+[/Script/Engine.PhysicsSettings]
+DefaultGravityZ=-980.000000
+DefaultTerminalVelocity=4000.000000
+DefaultFluidFriction=0.300000
+SimulateScratchMemorySize=262144
+RagdollAggregateThreshold=4
+TriangleMeshTriangleMinAreaThreshold=5.000000
+bEnableShapeSharing=False
+bEnablePCM=True
+bEnableStabilization=False
+bWarnMissingLocks=True
+bEnable2DPhysics=False
+PhysicErrorCorrection=(PingExtrapolation=0.100000,PingLimit=100.000000,ErrorPerLinearDifference=1.000000,ErrorPerAngularDifference=1.000000,MaxRestoredStateError=1.000000,MaxLinearHardSnapDistance=400.000000,PositionLerp=0.000000,AngleLerp=0.400000,LinearVelocityCoefficient=100.000000,AngularVelocityCoefficient=10.000000,ErrorAccumulationSeconds=0.500000,ErrorAccumulationDistanceSq=15.000000,ErrorAccumulationSimilarity=100.000000)
+DefaultDegreesOfFreedom=Full3D
+BounceThresholdVelocity=200.000000
+FrictionCombineMode=Average
+RestitutionCombineMode=Average
+MaxAngularVelocity=3600.000000
+MaxDepenetrationVelocity=0.000000
+ContactOffsetMultiplier=0.020000
+MinContactOffset=2.000000
+MaxContactOffset=8.000000
+bSimulateSkeletalMeshOnDedicatedServer=True
+DefaultShapeComplexity=CTF_UseSimpleAndComplex
+bSuppressFaceRemapTable=False
+bSupportUVFromHitResults=True
+bDisableActiveActors=False
+bDisableKinematicStaticPairs=False
+bDisableKinematicKinematicPairs=False
+bDisableCCD=False
+bEnableEnhancedDeterminism=False
+AnimPhysicsMinDeltaTime=0.000000
+bSimulateAnimPhysicsAfterReset=False
+MaxPhysicsDeltaTime=0.033333
+bSubstepping=False
+bSubsteppingAsync=False
+MaxSubstepDeltaTime=0.016667
+MaxSubsteps=6
+SyncSceneSmoothingFactor=0.000000
+InitialAverageFrameRate=0.016667
+PhysXTreeRebuildRate=10
++PhysicalSurfaces=(Type=SurfaceType1,Name="Land")
++PhysicalSurfaces=(Type=SurfaceType2,Name="Snow_Plane")
++PhysicalSurfaces=(Type=SurfaceType3,Name="PM_SnowGrass")
++PhysicalSurfaces=(Type=SurfaceType4,Name="PM_SnowRock")
++PhysicalSurfaces=(Type=SurfaceType5,Name="PM_Water")
+DefaultBroadphaseSettings=(bUseMBPOnClient=False,bUseMBPOnServer=False,bUseMBPOuterBounds=False,MBPBounds=(Min=(X=0.000000,Y=0.000000,Z=0.000000),Max=(X=0.000000,Y=0.000000,Z=0.000000),IsValid=0),MBPOuterBounds=(Min=(X=0.000000,Y=0.000000,Z=0.000000),Max=(X=0.000000,Y=0.000000,Z=0.000000),IsValid=0),MBPNumSubdivs=2)
+ChaosSettings=(DefaultThreadingModel=TaskGraph,DedicatedThreadTickMode=VariableCappedWithTarget,DedicatedThreadBufferMode=Double)
+
 [/Script/Engine.CollisionProfile]
 +Profiles=(Name="NoCollision",CollisionEnabled=NoCollision,bCanModify=False,ObjectTypeName="WorldStatic",CustomResponses=((Channel="Visibility",Response=ECR_Ignore),(Channel="Camera",Response=ECR_Ignore)),HelpMessage="No collision")
 +Profiles=(Name="BlockAll",CollisionEnabled=QueryAndPhysics,bCanModify=False,ObjectTypeName="WorldStatic",CustomResponses=,HelpMessage="WorldStatic object that blocks all actors by default. All new custom channels will use its own default response. ")
@@ -47,9 +103,13 @@ bGenerateNavigationOnlyAroundNavigationInvokers=True
 +Profiles=(Name="UI",CollisionEnabled=QueryOnly,bCanModify=False,ObjectTypeName="WorldDynamic",CustomResponses=((Channel="WorldStatic",Response=ECR_Overlap),(Channel="WorldDynamic",Response=ECR_Overlap),(Channel="Pawn",Response=ECR_Overlap),(Channel="Camera",Response=ECR_Overlap),(Channel="PhysicsBody",Response=ECR_Overlap),(Channel="Vehicle",Response=ECR_Overlap),(Channel="Destructible",Response=ECR_Overlap),(Channel="MyCharacter",Response=ECR_Overlap)),HelpMessage="WorldStatic object that overlaps all actors by default. All new custom channels will use its own default response. ")
 +Profiles=(Name="MyCharacter",CollisionEnabled=QueryAndPhysics,bCanModify=True,ObjectTypeName="MyCharacter",CustomResponses=((Channel="Visibility",Response=ECR_Ignore),(Channel="Attack")),HelpMessage="Needs description")
 +Profiles=(Name="MyMonster",CollisionEnabled=QueryAndPhysics,bCanModify=True,ObjectTypeName="MyMonster",CustomResponses=((Channel="Visibility",Response=ECR_Ignore),(Channel="Attack")),HelpMessage="Needs description")
++Profiles=(Name="Knob_collision",CollisionEnabled=QueryAndPhysics,bCanModify=True,ObjectTypeName="Knob",CustomResponses=((Channel="Knob")),HelpMessage="Needs description")
 +DefaultChannelResponses=(Channel=ECC_GameTraceChannel1,DefaultResponse=ECR_Block,bTraceType=False,bStaticObject=False,Name="MyCharacter")
 +DefaultChannelResponses=(Channel=ECC_GameTraceChannel2,DefaultResponse=ECR_Ignore,bTraceType=True,bStaticObject=False,Name="Attack")
 +DefaultChannelResponses=(Channel=ECC_GameTraceChannel3,DefaultResponse=ECR_Block,bTraceType=False,bStaticObject=False,Name="MyMonster")
++DefaultChannelResponses=(Channel=ECC_GameTraceChannel4,DefaultResponse=ECR_Block,bTraceType=True,bStaticObject=False,Name="Ledge")
++DefaultChannelResponses=(Channel=ECC_GameTraceChannel5,DefaultResponse=ECR_Block,bTraceType=False,bStaticObject=False,Name="Knob")
++DefaultChannelResponses=(Channel=ECC_GameTraceChannel6,DefaultResponse=ECR_Ignore,bTraceType=False,bStaticObject=False,Name="Bush")
 +EditProfiles=(Name="Trigger",CustomResponses=((Channel="MyCharacter",Response=ECR_Overlap),(Channel="MyMonster",Response=ECR_Overlap)))
 +EditProfiles=(Name="OverlapAll",CustomResponses=((Channel="MyCharacter",Response=ECR_Overlap),(Channel="MyMonster",Response=ECR_Overlap)))
 +EditProfiles=(Name="OverlapAllDynamic",CustomResponses=((Channel="MyCharacter",Response=ECR_Overlap),(Channel="MyMonster",Response=ECR_Overlap)))
@@ -71,13 +131,4 @@ bGenerateNavigationOnlyAroundNavigationInvokers=True
 +CollisionChannelRedirects=(OldName="MyCharacter",NewName="MyMonster")
 +CollisionChannelRedirects=(OldName="MyMonster",NewName="MyCharacter")
 
-[/Script/NavigationSystem.RecastNavMesh]
-bForceRebuildOnLoad=True
-RuntimeGeneration=Dynamic
-
-[/Script/Engine.RendererSettings]
-r.DefaultFeature.AutoExposure=False
-
-[/Script/Engine.PhysicsSettings]
-bSupportUVFromHitResults=True
 
