--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -10,4 +10,5 @@ InsertPack=(PackSource="StarterContent.upack",PackName="StarterContent")
 
 [/Script/UnrealEd.ProjectPackagingSettings]
 bCompressed=True
+BuildConfiguration=PPBC_DebugGame
 
