--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -9,7 +9,7 @@ DefaultGraphicsPerformance=Maximum
 AppliedDefaultGraphicsPerformance=Maximum
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Game/Maps/Test_map2.Test_map2
+EditorStartupMap=/Game/Game/Maps/Title.Title
 LocalMapOptions=
 TransitionMap=None
 bUseSplitscreen=True
@@ -18,9 +18,9 @@ ThreePlayerSplitscreenLayout=FavorTop
 FourPlayerSplitscreenLayout=Grid
 bOffsetPlayerGamepadIds=False
 GameInstanceClass=/Script/Last_Hero.MyGameInstance
-GameDefaultMap=/Game/Game/Maps/Test_map2.Test_map2
+GameDefaultMap=/Game/Game/Maps/Title.Title
 ServerDefaultMap=/Engine/Maps/Entry.Entry
-GlobalDefaultGameMode=/Game/Game/BluePrints/LoginTitle/LoginTitleGameMode.LoginTitleGameMode_C
+GlobalDefaultGameMode=/Game/Game/BluePrints/Title/BP_titleGamemode.BP_titleGamemode_C
 GlobalDefaultServerGameMode=None
 
 [/Script/NavigationSystem.NavigationSystemV1]
@@ -130,5 +130,3 @@ ChaosSettings=(DefaultThreadingModel=TaskGraph,DedicatedThreadTickMode=VariableC
 +CollisionChannelRedirects=(OldName="PawnMovement",NewName="Pawn")
 +CollisionChannelRedirects=(OldName="MyCharacter",NewName="MyMonster")
 +CollisionChannelRedirects=(OldName="MyMonster",NewName="MyCharacter")
-
-
