--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -9,7 +9,7 @@ DefaultGraphicsPerformance=Maximum
 AppliedDefaultGraphicsPerformance=Maximum
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Game/Maps/Title.Title
+EditorStartupMap=/Game/Game/Maps/Test_map2.Test_map2
 LocalMapOptions=
 TransitionMap=None
 bUseSplitscreen=True
@@ -18,7 +18,7 @@ ThreePlayerSplitscreenLayout=FavorTop
 FourPlayerSplitscreenLayout=Grid
 bOffsetPlayerGamepadIds=False
 GameInstanceClass=/Script/Last_Hero.MyGameInstance
-GameDefaultMap=/Game/Game/Maps/Title.Title
+GameDefaultMap=/Game/Game/Maps/Test_map2.Test_map2
 ServerDefaultMap=/Engine/Maps/Entry.Entry
 GlobalDefaultGameMode=/Game/Game/BluePrints/Title/BP_titleGamemode.BP_titleGamemode_C
 GlobalDefaultServerGameMode=None
